argocd/internal/loki/resources/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: loki-gateway
  namespace: monitoring
spec:
  selector:
    istio: ingressgateway
    igw-type: internal
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - loki.willyhu.tw
