argocd/internal/loki/resources/virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: loki-virtualservice
  namespace: monitoring
spec:
  hosts:
    - loki.willyhu.tw
  gateways:
    - loki-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: loki
            port:
              number: 3000
